[package]
name = "isp-db-creator"
version = "0.1.0"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.4"
clap = "2.33.3"
crossbeam = "0.8.0"
rayon = "1.5.0"
lazy_static = "1.4.0"
flate2 = "1.0.20"
rusqlite = "0.24.2"